Add logs link to each application in the main view
The logs link is computed using a pattern defined in the configuration file and
is displayed in the main page of Marathon. It helps the user accessing his logs
faster and make them reachable when the deployment fails.

--- a/src/css/components/app-list.less
+++ b/src/css/components/app-list.less
@@ -15,6 +15,10 @@
       width: auto;
     }
 
+    &.logs-link-col {
+      width: @base-spacing-unit*7;
+    }
+
     &.ram-col {
       width: @base-spacing-unit*12;
     }
