Add service link for each application entry
The service endpoint is computed from the app ID and the service domain that
must be provided in the configuration file.

The scheme is http by default but the user can specify an https scheme by
providing the label "SERVICE_SCHEME=https".

--- a/src/css/components/app-list.less
+++ b/src/css/components/app-list.less
@@ -19,6 +19,10 @@
       width: @base-spacing-unit*7;
     }
 
+    &.service-link-col {
+      width: @base-spacing-unit*7;
+    }
+
     &.ram-col {
       width: @base-spacing-unit*12;
     }
