Add a link generator for mesos task debugger

--- a/src/css/components/icons.less
+++ b/src/css/components/icons.less
@@ -54,6 +54,11 @@
     background-size: contain;
   }
 
+  &.play {
+    background-image: url("img/icons/icon-mini-play.svg");
+    background-size: contain;
+  }
+
   &.warning {
     background-image: url("img/icons/icon-warning.svg");
     background-size: contain;
