Add a link to the documentation when deployment is not running.
This will help users troubleshoot their deployments before asking.

--- a/src/css/components/app-status.less
+++ b/src/css/components/app-status.less
@@ -54,3 +54,8 @@
   }
 
 }
+
+.page-header .doc-deployment-troubles {
+  margin-top: @base-spacing-unit * 1.2;
+  font-size: @base-font-size * 0.8;
+}
