--- a/src/css/components/icons.less
+++ b/src/css/components/icons.less
@@ -54,6 +54,11 @@
     background-size: contain;
   }
 
+  &.sandbox {
+    background-image: url("img/icons/icon-mini-folder-stroke-open.svg");
+    background-size: contain;
+  }
+
   &.play {
     background-image: url("img/icons/icon-mini-play.svg");
     background-size: contain;
