Add Monitoring column on Task view
This column will be usable to produce a direct link to a
dashboard dedicated to this task

JIRA:MESOS-3396

--- a/src/css/components/icons.less
+++ b/src/css/components/icons.less
@@ -59,6 +59,11 @@
     background-size: contain;
   }
 
+  &.monitoring {
+    background-image: url("img/icons/icon-monitoring.svg");
+    background-size: contain;
+  }
+
   &.play {
     background-image: url("img/icons/icon-mini-play.svg");
     background-size: contain;
