Add network traffic feature
Change-Id: If582bd86e42853d899adc901f7408b8da293a203

--- a/src/css/components/icons.less
+++ b/src/css/components/icons.less
@@ -64,6 +64,12 @@
     background-size: contain;
   }
 
+  &.network {
+    background-image: url("img/icons/icon-network.svg");
+    background-size: contain;
+    filter: invert(100%);
+  }
+
   &.play {
     background-image: url("img/icons/icon-mini-play.svg");
     background-size: contain;
