Improve display of last failure (#31)
It will allow to hint user if task failure is recent (using red color to
indicate there might be something to do), a bit old (using yellow to
indicate it might the info they are looking for) or very old (using
green color to show it is likely ok despite being a failure).

Also precise some field naming

Change-Id: I66e827d1a3796de6af658c55a9231c8fdf659126

--- a/src/css/variables.less
+++ b/src/css/variables.less
@@ -53,6 +53,10 @@
 @app-status-delayed-color: @alizarin-crimson;
 @app-status-suspended-color: @oslo-gray;
 
+@timestamp-color-veryold: @emerald;
+@timestamp-color-old: @mustard;
+@timestamp-color-recent: @alizarin-crimson;
+
 // Health is specific to tasks, and distinct from app status
 @health-bar-inner-color: @mirage;
 @task-health-healthy-color: @emerald;
