--- a/src/css/main.less
+++ b/src/css/main.less
@@ -43,6 +43,7 @@
 @import "components/popover.less";
 @import "components/task-list.less";
 @import "components/task-file-list.less";
+@import "components/timestamp.less";
 @import "components/tooltip.less";
 @import "components/toggle.less";
 @import "components/volume-list.less";
